# viewd

./: .gitignore  Cargo.toml  README.md
config/: client.example.toml  server.example.toml
config/client/: example.toml
config/server/: example.toml
scripts/: generate-certificate.sh
src/: connection.rs  control.rs  db.rs  frame.rs  lib.rs  server.rs  window.rs
src/clients/: client.rs  config.rs  mod.rs  tls.rs
src/cmd/: get.rs  mod.rs  set.rs  unknown.rs
src/sdl_window/: cursor.rs  mod.rs  navigator.rs  pageant.rs  state.rs  window.rs
src/serve/: config.rs  handler.rs  listener.rs  mod.rs  tls.rs
src/tui/: mod.rs  tui.rs
