[package]
name = "viewd"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "viewd-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "viewd-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "viewd-server"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1.0.75"
atoi = "2.0.0"
bytes = "1.4.0"
clap = { version = "4.4.0", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
futures-timer = "3.0.2"
rayon = "1.7.0"
terminal-keycode = "1.1.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.4.0"
rustls-pemfile = "1.0.3"
config = "0.13.3"
serde_derive = "1.0.188"
serde = "1.0.188"


[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]
